--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
   <div class="app">
     <h1>Mis Tareas</h1>
-    <form id="task-form">
-      <input type="text" id="task-input" placeholder="Escribe una tarea..." required>
-      <button type="submit">Agregar</button>
+    <form class="task-form">
+      <input type="text" class="task-input" placeholder="Escribe una tarea..." required>
+      <button type="submit" class="add-btn">Agregar</button>
     </form>
-    <ul id="task-list"></ul>
+    <ul id="task-list">
+      
+    </ul>
   </div>
   
   <script src="code.js"></script>
