--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <input type="text" class="task-input" placeholder="Escribe una tarea..." required>
       <button type="submit" class="add-btn">Agregar</button>
     </form>
-    <ul id="task-list">
-      
+    <ul class="task-list">
+
     </ul>
   </div>
   
