Terminado el CSS haciendo una paleta de colores amigable a la interfaz, y cambiado un etalle en el JS para visualizar mejor la hora y fecha

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="app">
     <h1>Mis Tareas</h1>
     <form class="task-form">
-      <input type="text" class="task-input" placeholder="Escribe una tarea..." required>
+      <input type="text" class="task-input" placeholder="Escribe una tarea..." required minlength="4" maxlength="80">
       <button type="submit" class="add-btn">Agregar</button>
     </form>
     <ul class="task-list">
